--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,27 @@
+
 .w70{
     width: 70%;
 }
 
-.w30{
-    width: 30%;
+.w25{
+    width: 25%;
+}
+
+.jumbotron-holder{
+    /* width: 100%; */
+    height: 500px;
+    background-color: #ec7;
+}
+
+.h100{
+    /* width: 200px; */
+    height: 200px;
+    background-color: azure;
+    border: 1px solid #bbb;
+}
+
+/* Footer Details */
+footer{
+    height: 500px;
+    clear: both;
 }
